# colatranslate

./: .gitignore  Makefile  README.md  pubspec.yaml
assets/: README.md
docs/: README.md  ai-build-journey.md  (+4 more)
native/: CMakeLists.txt  cola_test.cpp  cola_translate.cpp  cola_translate.h
native/build_android_arm64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
native/build_android_arm64/llama_cpp_build/: cmake_install.cmake  llama-config.cmake
native/build_android_arm64/llama_cpp_build/ggml/: cmake_install.cmake  ggml-config.cmake
native/build_android_arm64/llama_cpp_build/ggml/src/: cmake_install.cmake
native/build_android_arm64/llama_cpp_build/ggml/src/ggml-cpu/: cmake_install.cmake
native/build_android_arm64/llama_cpp_build/src/: cmake_install.cmake
native/build_ios_dev/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
native/build_ios_dev/llama_cpp_build/: cmake_install.cmake
native/build_ios_dev/llama_cpp_build/ggml/: cmake_install.cmake
native/build_ios_dev/llama_cpp_build/ggml/src/: cmake_install.cmake
native/build_ios_dev/llama_cpp_build/ggml/src/ggml-cpu/: cmake_install.cmake
native/build_ios_dev/llama_cpp_build/src/: cmake_install.cmake
native/build_ios_sim/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
native/build_ios_sim/llama_cpp_build/: cmake_install.cmake
native/build_ios_sim/llama_cpp_build/ggml/: cmake_install.cmake  ggml-config.cmake
native/build_ios_sim/llama_cpp_build/ggml/src/: cmake_install.cmake
native/build_ios_sim/llama_cpp_build/ggml/src/ggml-cpu/: cmake_install.cmake
native/build_ios_sim/llama_cpp_build/src/: cmake_install.cmake
native/build_mac/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  cola_test  compile_commands.json
native/build_mac/llama_cpp_build/: cmake_install.cmake
native/build_mac/llama_cpp_build/ggml/: cmake_install.cmake  ggml-config.cmake
native/build_mac/llama_cpp_build/ggml/src/: cmake_install.cmake
native/build_mac/llama_cpp_build/ggml/src/ggml-cpu/: cmake_install.cmake
native/build_mac/llama_cpp_build/src/: cmake_install.cmake
(+54 files in other folders)
